fix DiscordWidget component users alignment

--- a/client/src/styles/scss/index.scss
+++ b/client/src/styles/scss/index.scss
@@ -939,6 +939,7 @@ body {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
+            align-content: flex-start;
             background: #fffcfc;
             margin: 0;
             height: 70%;
